# gitlite

./: CMakeLists.txt  README.md  main.cpp  score.md
include/: Blob.h  Branch.h  Commit.h  GitletException.h  HEAD.h  Remote.h  Repository.h  SomeObj.h  StagingArea.h
src/: Blob.cpp  Branch.cpp  Commit.cpp  GitletException.cpp  HEAD.cpp  Remote.cpp  Repository.cpp  SomeObj.cpp  StagingArea.cpp  Utils.cpp
testing/: out.txt  tester.py
